--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 #dankPic {
     display: none;
     border-radius: 5px;
+    max-width: 70vw;
 }
 #error {
     display: none;
@@ -19,7 +20,7 @@
 .container {
     display: flex;
     width: 100%;
-    height: 70vh;
+    min-height: 70vh;
     justify-content: center;
     align-items: center;
 }
